styles.css
@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800;900&display=swap");
@import url("https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,900;1,400;1,500&display=swap");
* {
  padding: 0;
  margin: 0;
  box-sizing: border-box;
  font-family: "Poppins", sans-serif;
}

:root {
  --document-color: #f5f5dc;
  --font-color: #000000
} 

.dark-theme {
  --document-color: rgb(5, 1, 1);
  --font-color : #ffffff
}

.wrapper {
  height: 100vh;
  width: 100%;
  background-color: var(--document-color);
  color: var(--font-color);
  display: flex;
  transition: background-color 0.5s, color 0.3s;
}

.left-section {
  height: 100vh;
  width: 20%;
  border-right: 1px solid rgba(0, 0, 0, 0.3);
  display: flex;
  flex-direction: column;
  justify-content: center;
  transition: background-color 0.5s, color 0.3s;
}

.left-section-dark{
  border-right: 1px solid rgba(255, 255, 255, 0.3);
}

.menu-container {
  height: 90%;
  margin: auto 0;
  /* background-color: red; */
  display: flex;
  flex-direction: column;
  gap: 5rem;
}

.title {
  text-align: center;
  margin-top: 1rem;
  font-size: 1.5rem;
  text-transform: uppercase;
  /* position: absolute;
  top: 3rem;
  left: 5.5rem; */
}

#title-sorting {
  font-family: "Raleway", sans-serif;
  font-size: 3rem;
  font-weight: bold;
}

#title-visualiser {
  font-family: "Raleway", sans-serif;
  font-size: 1rem;
  font-weight: 500;
  font-style: italic;
}

.parameters {
  margin: 0 auto;
  height: 200px;
  width: 70%;
  display: flex;
  flex-direction: column;
  justify-content: center;
  gap: 1rem;
}

.reset-button {
  padding: 10px;
  border: none;
  border-radius: 7px;
  background-color: #0c227b;
  font-size: 15px;
  color: white;
  font-weight: 400;
  cursor: pointer;
  transition: all 0.2s;
  letter-spacing: 0.2ch;
}

.reset-button:hover {
  background-color: #04103f;
  box-shadow: 2px 2px 4px #04103f;
}

.slider {
  appearance: none;
}

.slider::-webkit-slider-thumb {
  margin-top: -5px;
  appearance: none;
  height: 1rem;
  width: 1rem;
  border-radius: 50%;
  background-color: #ffbfa9;
}

.slider::-webkit-slider-runnable-track {
  background-color: #ff6969;
  border-radius: 8px;
  height: 5px;
}

.buttons-box {
  display: flex;
  flex-direction: column;
  justify-content: center;
  gap: 1.7rem;
  align-items: center;
}

.buttons-box button {
  cursor: pointer;
  border-radius: 7px;
  border: none;
  width: 60%;
  padding: 10px;
  transition: 0.2s;
  font-weight: 500;
}

.btn-disable {
  cursor: not-allowed;
  pointer-events: none;
}

.bubble {
  background-color: #ffc107;
}

.bubble:hover {
  background-color: #cc9a05;
  box-shadow: 2px 2px 4px #cc9a05;
}

.selection {
  background-color: #6c757c;
  color: rgb(231, 231, 231);
}

.selection:hover {
  background-color: #3f4449;
  box-shadow: 2px 2px 4px #3f4449;
}

.insertion {
  background-color: #1a8755;
  color: rgb(231, 231, 231);
}

.insertion:hover {
  background-color: #105434;
  box-shadow: 2px 2px 4px #105434;
}

.merge {
  background-color: #d83444;
  color: rgb(231, 231, 231);
}

.merge:hover {
  background-color: #a42733;
  box-shadow: 2px 2px 4px #a42733;
}

.quick {
  background-color: #7e12a9;
  color: rgb(231, 231, 231);
}

.quick:hover {
  background-color: #46074b;
  box-shadow: 2px 2px 4px #46074b;
}

.right-section {
  width: 100%;
}

.container {
  width: 80%;
  height: 100vh;
  margin: 0 auto;
}

.legend {
  height: 100px;
  /* display: flex; */
  position: relative;
}

.legend-items {
  display: flex;
  /* display: inline-block; */
  position: absolute;
  top: 3.75rem;
}

.legend-items div {
  height: 20px;
  width: 20px;
  border: 1px solid black;
  border-radius: 50%;
}

.legend-items p {
  margin: 0px 15px 0 5px;
}

.unsorted-legend {
  background-color: white;
}

.sorted-legend {
  background-color: green;
}

.comparison-red-legend {
  background-color: red;
}

.toggle-switch {
  position: absolute;
  left: 75rem;
  top: 4rem;
}

.toggle-slider {
  height: 1.85rem;
  width: 3.5rem;
  background-color: #222;
  border-radius: 30px;
  position: relative;
}

.toggle-thumb {
  height: 1.6rem;
  width: 1.6rem;
  background-color: #505050;
  border-radius: 50%;
  position: absolute;
  top: 2px;
  left: 3px;
  transition: 0.3s;
}

.toggle-on {
  left: 1.7rem;
}

.sorting-window {
  background-color: black;
  height: 500px;
  display: flex;
  align-items: flex-end;
  justify-content: center;
  padding-top: 100px;
  padding: 100px 1rem 0 1rem;
  border-radius: 10px;
}

.sorting-window-dark{
  background-color: rgb(18, 18, 23);
}

.bar-style {
  width: 10%;
  width: 1rem;
  background-color: aliceblue;
  margin: 1px;
  transition: 0.3s all ease;
}

.details {
}

.time {
  display: flex;
  flex-direction: column;
  width: 100%;
  border-bottom: 1px solid rgba(0, 0, 0, 0.3);
}

.time-top {
  margin-top: 5rem;
  background-color: #829ef4;
  width: 100%;
  height: 35px;
  display: flex;
  justify-content: space-evenly;
  align-items: center;
  position: relative;
}

#first-item {
  position: absolute;
  font-weight: bold;
  left: 0.5rem;
}

.time-bottom {
  width: 100%;
  height: 30px;
  display: flex;
  justify-content: space-evenly;
  align-items: center;
  position: relative;
  font-size: 1rem;
  margin-bottom: 5px;
}

li {
  list-style-type: none;
  font-weight: bold;
}

.space {
  display: flex;
  flex-direction: column;
  width: 100%;
  border-bottom: 1px solid rgba(0, 0, 0, 0.3);
}

.space-top {
  margin-top: 1rem;
  background-color: #98c4b7;
  width: 100%;
  height: 35px;
  display: flex;
  justify-content: space-evenly;
  align-items: center;
  position: relative;
}

.space-bottom {
  width: 100%;
  height: 30px;
  display: flex;
  justify-content: space-evenly;
  align-items: center;
  position: relative;
  font-size: 1rem;
  margin-bottom: 5px;
}

